# DOL_fatbody_tj

./: .gitignore  CMakeLists.txt  Makefile  README.md  cluster.R  config_parser.h  create_ini.R  create_json.R  individual.h  main.cpp  parameters.cpp  parameters.h  rand_t.h  simulation.cpp  simulation.h  statistics.h
.github/workflows/: c-cpp.yml  test.yml
DOL/: main.cpp
DOL.xcodeproj/: project.pbxproj
DOL.xcodeproj/xcuserdata/daniel.xcuserdatad/xcschemes/: xcschememanagement.plist
test/: CMakeLists.txt  catch.h  main_test.cpp  test.ini
